API Endpoints for UpdateTimeseries, DeleteTimeseries; Regression Tests; API Docs
